[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/Tower/LaserTowerCannon.gd" type="Script" id=1]
[ext_resource path="res://Assets/Sprites/Towers/LaserTower.png" type="Texture" id=2]
[ext_resource path="res://Assets/Sprites/Towers/Reticle.png" type="Texture" id=3]

[node name="LaserTower" type="Node2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.05, 0.05 )
texture = ExtResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite"]

[node name="Timer" type="Timer" parent="."]

[node name="Target" type="Position2D" parent="."]

[node name="Sprite" type="Sprite" parent="Target"]
scale = Vector2( 0.05, 0.05 )
texture = ExtResource( 3 )

[node name="Tower Base Area" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 56

[node name="CollisionShape2D" type="CollisionShape2D" parent="Tower Base Area"]

[node name="Spin" type="Node2D" parent="."]

[node name="Laser" type="Node2D" parent="Spin"]
rotation = 1.5708

[node name="Attack Range Area" type="Area2D" parent="Spin/Laser"]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Spin/Laser/Attack Range Area"]

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="area_entered" from="Spin/Laser/Attack Range Area" to="." method="_on_Attack_Range_Area_area_entered"]
[connection signal="area_exited" from="Spin/Laser/Attack Range Area" to="." method="_on_Attack_Range_Area_area_exited"]
